2004-06-03  Miles Bader  <miles@gnu.org>

	* minibuf-eldef.el (minibuffer-default-in-prompt-regexps): Add
	regexp for " [...]" style defaults.

2004-06-02  Romain Francoise  <romain@orebokech.com>

	* ibuf-ext.el (ibuffer-jump-to-buffer): Add support for filter
	groups: if the user asks for a hidden buffer, open the
	corresponding filter group to expose it.

	* ibuffer.el (ibuffer-mode-map): Add key binding `M-g' to
	`ibuffer-jump-to-buffer'.
	(ibuffer-jump-offer-only-visible-buffers): New user option.

2004-06-02  Juanma Barranquero  <lektu@terra.es>

	* faces.el (frame-update-faces): Add empty docstring so the one
	for `ignore' doesn't show through.

	* subr.el (process-kill-without-query): Remove spurious "\n" on
	obsolescence string.
	(focus-frame, unfocus-frame): Add obsolescence declaration and
	empty docstring.

	* international/mule.el (register-char-codings): Make alias for
	`ignore'.  Move docstring to obsolescence info and remove
	redundancy.

2004-06-02  Kim F. Storm  <storm@cua.dk>

	* frame.el (blink-cursor-start): Turn cursor off initially so blink
	starts after blink-cursor-delay rather than 2*blink-cursor-delay.

2004-05-31  Stefan Monnier  <monnier@iro.umontreal.ca>

	* vc-arch.el (vc-arch-state): Don't assume the file exists.

2004-05-31  Lars Hansen  <larsh@math.ku.dk>

	* desktop.el (desktop-save): Don't save minor modes without a
	known mode initialization function.

2004-05-30  Luc Teirlinck  <teirllm@auburn.edu>

	* replace.el (query-replace-interactive): Convert defvar -> defcustom.

	* autorevert.el: Update `Commentary' section.

2004-05-30  Juanma Barranquero  <lektu@terra.es>

	* dos-fns.el (convert-standard-filename):
	* files.el (convert-standard-filename):
	* w32-fns.el (convert-standard-filename):
	Rework docstring (wording by Eli Zaretskii and Kai Grossjohann).

2004-05-30  Kai Grossjohann  <kai.grossjohann@gmx.net>

	Sync with Tramp.

	* net/tramp.el (tramp-let-maybe): Reverse args of `get'.